# mia

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts  项目架构详解.md
data/memory/: index.json
data/memory/daily/: 2026-06-18.json  2026-06-19.json
mia-web/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
mia-web/src/: MainLayout.tsx  api.ts
mia-web/src/api/: channels.ts  chat.ts  client.ts  config.ts  memory.ts  sessions.ts
mia-web/src/layouts/: MainLayout.vue
mia-web/src/pages/: ChatPage.tsx
mia-web/src/router/: index.ts
mia-web/src/stores/: channels.ts  chat.ts  memory.ts  sessions.ts
mia-web/src/types/: index.ts
mia-web/src/views/: ChatView.vue  MemoryView.vue  SessionsView.vue  SettingsView.vue
mia-web/tests/: setup.ts
mia-web/tests/api/: channels.test.ts  memory.test.ts  sessions.test.ts
mia-web/tests/components/: ChatInput.test.ts  MessageBubble.test.ts  ModelPanel.test.ts
mia-web/tests/stores/: channels.test.ts  (+3 more)
prompts/: scheduler.md  task_agent.md
public/: index.html
src/: config.ts  index.ts  main.ts  model-registry.ts
src/agents/: base.ts  index.ts  memory.ts  receiver.ts  scheduler.ts  sender.ts  task.ts
src/audio/: index.ts
src/bus/: bus.ts  index.ts  message.ts
src/channels/: index.ts
src/cli/: commands.ts  index.ts
src/memory/: browser.ts  index.ts  retriever.ts  store.ts
src/mia/: config.py  main.py  model_registry.py  util.py
src/providers/: base.ts  deepseek.ts  index.ts  mimo.ts
src/server/: ws-relay.ts
src/tools/: base.ts  file.ts  index.ts  shell.ts  weather.ts  web-search.ts
src/tui/: app.tsx  border.ts  entry.ts  index.ts  run.ts  store.ts  types.ts
tests/: test-config.test.ts  test-memory-pipeline.test.ts  test-memory-storage.test.ts  test-message-bus.test.ts  test_full_pipeline.py  test_memory_browser.py  test_memory_storage.py
(+50 files in other folders)
