[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mia"
version = "0.1.0"
description = "MiMo Intelligent Agent — 基于LLM循环的多Agent系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
    "asyncio-throttle>=1.0.0",
    "questionary>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.0.0",
]

# 录音/音频功能 (可选)
audio = [
    "sounddevice>=0.5.0",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
]

# 微信渠道 (可选 — AES 媒体加解密)
wechat = [
    "pycryptodome>=3.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
timeout = 180
